--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nombre X - Acceso</title>
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
   <div class="container" style="display:flex; flex-direction:row; min-height:100vh;">
@@ -48,6 +48,7 @@
     </div>
   </div>
 
-  <script src="index.js"></script>
+  <script src="js/index.js"></script>
 </body>
+
 </html>
