--- a/servicios.html
+++ b/servicios.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Servicios - TechFix</title>
-  <link rel="stylesheet" href="servicios.css">
-  <script src="servicios.js" defer></script>
+  <link rel="stylesheet" href="css/servicios.css">
+  <script src="js/servicios.js" defer></script>
 </head>
 <body>
   <header class="site-header small">
@@ -50,3 +50,4 @@
   </footer>
 </body>
 </html>
+
