--- a/clientes.html
+++ b/clientes.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Registrar Cliente - TechFix</title>
-  <link rel="stylesheet" href="clientes.css">
-  <script src="clientes.js" defer></script>
+  <link rel="stylesheet" href="css/clientes.css">
+  <script src="js/clientes.js" defer></script>
 </head>
 
 <body>
@@ -63,3 +63,4 @@
   </main>
 </body>
 </html>
+
