Update paths for CSS and JS in cotizar.html

--- a/cotizar.html
+++ b/cotizar.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Cotizar Servicio - TechFix</title>
-  <link rel="stylesheet" href="cotizar.css">
-  <script src="cotizar.js" defer></script>
+  <link rel="stylesheet" href="css/cotizar.css">
+  <script src="js/cotizar.js" defer></script>
 </head>
 
 <body>
@@ -56,3 +56,4 @@
   </main>
 </body>
 </html>
+
