Refactor index-admin.html layout and content
Updated the HTML structure and content for the admin index page, including changes to the hero section and navigation.

--- a/index-admin.html
+++ b/index-admin.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TechFix - Cotizaciones</title>
-  <link rel="stylesheet" href="css/index-admin.css">
+  <link rel="stylesheet" href="index-admin.css">
   <script src="js/main.js" defer></script>
 </head>
 <body>
@@ -22,7 +22,7 @@
     </nav>
 
     <div class="cta">
-      <button class="btn-ghost" onclick="location.href='cotizar.html'">Start Free</button>
+      <button class="btn-ghost" href= "index.html">Salir</button>
     </div>
   </header>
 
@@ -30,32 +30,14 @@
     <section class="hero">
       <div class="hero-inner">
         <span class="badge">NEW · Nueva integración</span>
-        <h1>Boost your <span>rankings</span> with AI.</h1>
-        <p>Eleva la visibilidad de tu oferta de servicios con una web profesional y control de cotizaciones.</p>
+        <h1>¡Bienvenido a <span> nombre x!</span> Explora nuestros servicios.</h1>
+        <p>Nuestro equipo especializado asegura la estabilidad, seguridad y máxima performance de sus sistemas, minimizando riesgos y tiempos de inactividad.</p>
         <div class="hero-actions">
-          <a class="btn-primary" href="cotizar.html">Comenzar - Cotizar</a>
-          <a class="btn-outline" href="servicios.html">Ver servicios</a>
+          <a class="btn-primary" href="cotizar.html">Cotizar</a>
+          <a class="btn-outline" href="servicios.html">Servicios</a>
         </div>
       </div>
 
-      <div class="hero-panel">
-        <!-- panel simulado del dashboard -->
-        <div class="panel-top">
-          <div class="small-pill">Site Overview</div>
-          <div class="small-pill">Jun 24 → Today</div>
-        </div>
-        <div class="panel-body">
-          <div class="stat">
-            <div class="stat-title">Visibility</div>
-            <div class="stat-value">10.15% <span class="delta">+5.6%</span></div>
-          </div>
-          <div class="chart-placeholder">[ Dashboard preview ]</div>
-          <div class="stat">
-            <div class="stat-title">Organic Keywords</div>
-            <div class="stat-value">35.6K <span class="delta neg">-2.5%</span></div>
-          </div>
-        </div>
-      </div>
     </section>
 
     <section class="features">
