Fix HTML structure and update stylesheet path

--- a/index-admin.html
+++ b/index-admin.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TechFix - Cotizaciones</title>
-  <link rel="stylesheet" href="index-admin.css">
+  <link rel="stylesheet" href="css/index-admin.css">
   <script src="js/main.js" defer></script>
 </head>
 <body>
@@ -68,5 +68,6 @@
   </main>
 </body>
 </html>
+
 
 
