Fix HTML syntax issues in index-admin.html

--- a/index-admin.html
+++ b/index-admin.html
@@ -22,7 +22,7 @@
     </nav>
 
     <div class="cta">
-      <button class="btn-ghost" href= "index.html">Salir</button>
+      <a class="btn-ghost" href="index.html">Salir</a>
     </div>
   </header>
 
@@ -68,6 +68,7 @@
   </main>
 </body>
 </html>
+
 
 
 
