Change hero badge text to 'Administrador'
Updated the hero badge text from 'Nueva integración' to 'Administrador'.

--- a/index-admin.html
+++ b/index-admin.html
@@ -29,7 +29,7 @@
   <main>
     <section class="hero">
       <div class="hero-inner">
-        <span class="badge">NEW · Nueva integración</span>
+        <span class="badge">NEW · Administrador</span>
         <h1>¡Bienvenido a <span> nombre x!</span> Explora nuestros servicios.</h1>
         <p>Nuestro equipo especializado asegura la estabilidad, seguridad y máxima performance de sus sistemas, minimizando riesgos y tiempos de inactividad.</p>
         <div class="hero-actions">
@@ -68,6 +68,7 @@
   </main>
 </body>
 </html>
+
 
 
 
