Fix file paths and update link in index-user.html
Updated the file paths for the CSS and HTML links and changed the link for 'Cotizar producto'.

--- a/index-user.html
+++ b/index-user.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TechFix - Cotizaciones</title>
-  <link rel="stylesheet" href="index-user.css">
+  <link rel="stylesheet" href="css/index-user.css">
   <script src="js/main.js" defer></script>
 </head>
 <body>
@@ -28,11 +28,11 @@
   <main>
     <section class="hero">
       <div class="hero-inner">
-        <span class="badge">NEW · usuario</span>
+        <span class="badge">NEW · Usuario</span>
         <h1>¡Bienvenido a <span> nombre x!</span> Explora nuestros servicios.</h1>
         <p>Nuestro equipo especializado asegura la estabilidad, seguridad y máxima performance de sus sistemas, minimizando riesgos y tiempos de inactividad.</p>
         <div class="hero-actions">
-          <a class="btn-primary" href="cotizar.html">Cotizar producto</a>
+          <a class="btn-primary" href="cotizar-user.html">Cotizar producto</a>
           <a class="btn-outline" href="servicios.html">Ver servicios</a>
         </div>
       </div>
@@ -67,3 +67,4 @@
   </main>
 </body>
 </html>
+
