Fix HTML structure and update navigation links

--- a/index-user.html
+++ b/index-user.html
@@ -15,8 +15,8 @@
     </div>
 
     <nav class="nav">
-      <a href="index-admin.html">Inicio</a>
-      <a href="servicios.html">Servicios</a>
+      <a href="index-user.html">Inicio</a>
+      <a href="servicios-user.html">Servicios</a>
       <a href="cotizar.html">Cotizar</a>
     </nav>
 
@@ -67,4 +67,5 @@
   </main>
 </body>
 </html>
+
 
