--- a/servicios-user.html
+++ b/servicios-user.html
@@ -11,8 +11,8 @@
   <header class="site-header small">
     <div class="logo"><div class="logo-dot"></div><span>TechFix</span></div>
     <nav class="nav">
-      <a href="index.html">Inicio</a>
-      <a href="servicios.html" class="active">Servicios</a>
+      <a href="index-user.html">Inicio</a>
+      <a href="servicios-user.html" class="active">Servicios</a>
       <a href="cotizar.html">Cotizar</a>
     </nav>
   </header>
@@ -48,3 +48,4 @@
   </footer>
 </body>
 </html>
+
