Update navigation links for admin services page

--- a/servicios-admin.html
+++ b/servicios-admin.html
@@ -11,10 +11,10 @@
   <header class="site-header small">
     <div class="logo"><div class="logo-dot"></div><span>TechFix</span></div>
     <nav class="nav">
-      <a href="index.html">Inicio</a>
-      <a href="servicios.html" class="active">Servicios</a>
-      <a href="clientes.html">Registrar Cliente</a>
-      <a href="cotizar.html">Cotizar</a>
+      <a href="index-admin.html">Inicio</a>
+      <a href="servicios-admin.html" class="active">Servicios</a>
+      <a href="clientes-admin.html">Registrar Cliente</a>
+      <a href="cotizar-admin.html">Cotizar</a>
     </nav>
   </header>
 
@@ -49,5 +49,6 @@
   </footer>
 </body>
 </html>
+
 
 
