Update links to admin pages in index-admin.html

--- a/index-admin.html
+++ b/index-admin.html
@@ -16,9 +16,9 @@
 
     <nav class="nav">
       <a href="index-admin.html">Inicio</a>
-      <a href="servicios.html">Servicios</a>
-      <a href="clientes.html">Registrar Cliente</a>
-      <a href="cotizar.html">Cotizar</a>
+      <a href="servicios-admin.html">Servicios</a>
+      <a href="clientes-admin.html">Registrar Cliente</a>
+      <a href="cotizar-admin.html">Cotizar</a>
     </nav>
 
     <div class="cta">
@@ -68,6 +68,7 @@
   </main>
 </body>
 </html>
+
 
 
 
