--- a/clientes-admin.html
+++ b/clientes-admin.html
@@ -12,10 +12,10 @@
   <header class="site-header">
     <div class="logo"><span>TechFix</span></div>
     <nav class="nav">
-      <a href="index.html">Inicio</a>
-      <a href="servicios.html">Servicios</a>
-      <a href="clientes.html" class="active">Registrar Cliente</a>
-      <a href="cotizar.html">Cotizar</a>
+      <a href="index-admin.html">Inicio</a>
+      <a href="servicios-admin.html">Servicios</a>
+      <a href="clientes-admin.html" class="active">Registrar Cliente</a>
+      <a href="cotizar-admin.html">Cotizar</a>
     </nav>
   </header>
 
@@ -63,4 +63,5 @@
   </main>
 </body>
 </html>
+
 
