--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -12,10 +12,10 @@
   <header class="site-header small">
     <div class="logo"><div class="logo-dot"></div><span>TechFix</span></div>
     <nav class="nav">
-      <a href="index.html">Inicio</a>
-      <a href="servicios.html">Servicios</a>
-      <a href="clientes.html">Registrar Cliente</a>
-      <a href="cotizar.html" class="active">Cotizar</a>
+      <a href="index-admin.html">Inicio</a>
+      <a href="servicios-admin.html">Servicios</a>
+      <a href="clientes-admin.html">Registrar Cliente</a>
+      <a href="cotizar-admin.html" class="active">Cotizar</a>
     </nav>
   </header>
 
@@ -55,5 +55,6 @@
   </main>
 </body>
 </html>
+
 
 
