--- a/index-user.html
+++ b/index-user.html
@@ -17,7 +17,7 @@
     <nav class="nav">
       <a href="index-user.html">Inicio</a>
       <a href="servicios-user.html">Servicios</a>
-      <a href="cotizar.html">Cotizar</a>
+      <a href="cotizar-user.html">Cotizar</a>
     </nav>
 
     <div class="cta">
@@ -67,5 +67,6 @@
   </main>
 </body>
 </html>
+
 
 
