Fix HTML formatting issues in index-user.html

--- a/index-user.html
+++ b/index-user.html
@@ -21,7 +21,7 @@
     </nav>
 
     <div class="cta">
-      <button class="btn-ghost" href= "index.html">Salir</button>
+       <a class="btn-ghost" href="index.html">Salir</a>
     </div>
   </header>
 
@@ -67,6 +67,7 @@
   </main>
 </body>
 </html>
+
 
 
 
