Correct label casing for service selection

--- a/cotizar-user.html
+++ b/cotizar-user.html
@@ -27,7 +27,7 @@
         <label>Cliente</label>
         <input type="text" id="nombreCliente" placeholder="Nombre del cliente">
 
-        <label>Seleccionar Servicio</label>
+        <label>Seleccionar servicio</label>
         <select id="selectServicio"></select>
 
         <button id="btnAgregar" class="btn-add">Agregar Servicio</button>
