--- a/index-admin.html
+++ b/index-admin.html
@@ -33,8 +33,8 @@
         <h1>¡Bienvenido a <span> nombre x!</span> Explora nuestros servicios.</h1>
         <p>Nuestro equipo especializado asegura la estabilidad, seguridad y máxima performance de sus sistemas, minimizando riesgos y tiempos de inactividad.</p>
         <div class="hero-actions">
-          <a class="btn-primary" href="cotizar.html">Cotizar</a>
-          <a class="btn-outline" href="servicios.html">Servicios</a>
+          <a class="btn-primary" href="cotizar-admin.html">Cotizar</a>
+          <a class="btn-outline" href="servicios-admin.html">Servicios</a>
         </div>
       </div>
 
@@ -68,6 +68,7 @@
   </main>
 </body>
 </html>
+
 
 
 
