Fix HTML encoding issues in index-user.html

--- a/index-user.html
+++ b/index-user.html
@@ -33,7 +33,7 @@
         <p>Nuestro equipo especializado asegura la estabilidad, seguridad y máxima performance de sus sistemas, minimizando riesgos y tiempos de inactividad.</p>
         <div class="hero-actions">
           <a class="btn-primary" href="cotizar-user.html">Cotizar producto</a>
-          <a class="btn-outline" href="servicios.html">Ver servicios</a>
+          <a class="btn-outline" href="servicios-user.html">Ver servicios</a>
         </div>
       </div>
 
@@ -67,6 +67,7 @@
   </main>
 </body>
 </html>
+
 
 
 
