--- a/servicios-user.html
+++ b/servicios-user.html
@@ -13,7 +13,7 @@
     <nav class="nav">
       <a href="index-user.html">Inicio</a>
       <a href="servicios-user.html" class="active">Servicios</a>
-      <a href="cotizar.html">Cotizar</a>
+      <a href="cotizar-user.html">Cotizar</a>
     </nav>
   </header>
 
@@ -48,4 +48,5 @@
   </footer>
 </body>
 </html>
+
 
