--- a/index-admin.html
+++ b/index-admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TechFix - Cotizaciones</title>
+  <title>CORECLOUD - Cotizaciones</title>
   <link rel="stylesheet" href="css/index-admin.css">
   <script src="js/main.js" defer></script>
 </head>
@@ -11,7 +11,7 @@
   <header class="site-header">
     <div class="logo">
       <div class="logo-dot"></div>
-      <span>TechFix</span>
+      <span>CORECLOUD</span>
     </div>
 
     <nav class="nav">
@@ -30,7 +30,7 @@
     <section class="hero">
       <div class="hero-inner">
         <span class="badge">NEW · Administrador</span>
-        <h1>¡Bienvenido a <span> nombre x!</span> Explora nuestros servicios.</h1>
+        <h1>¡Bienvenido a <span> CORECLOUD!</span> Explora nuestros servicios.</h1>
         <p>Nuestro equipo especializado asegura la estabilidad, seguridad y máxima performance de sus sistemas, minimizando riesgos y tiempos de inactividad.</p>
         <div class="hero-actions">
           <a class="btn-primary" href="cotizar-admin.html">Cotizar</a>
@@ -59,7 +59,7 @@
     </section>
 
     <footer class="site-footer">
-      <div>© TechFix 2025</div>
+      <div>© CORECLOUD 2025</div>
       <div class="footer-links">
         <a href="#">Privacidad</a>
         <a href="#">Soporte</a>
@@ -68,6 +68,7 @@
   </main>
 </body>
 </html>
+
 
 
 
