--- a/index-user.html
+++ b/index-user.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TechFix - Cotizaciones</title>
+  <title>CoreCloud - Cotizaciones</title>
   <link rel="stylesheet" href="css/index-user.css">
   <script src="js/main.js" defer></script>
 </head>
@@ -11,7 +11,7 @@
   <header class="site-header">
     <div class="logo">
       <div class="logo-dot"></div>
-      <span>TechFix</span>
+      <span>CoreCloud</span>
     </div>
 
     <nav class="nav">
@@ -29,7 +29,7 @@
     <section class="hero">
       <div class="hero-inner">
         <span class="badge">NEW · Usuario</span>
-        <h1>¡Bienvenido a <span> nombre x!</span> Explora nuestros servicios.</h1>
+        <h1>¡Bienvenido a <span> CoreCloud!</span> Explora nuestros servicios.</h1>
         <p>Nuestro equipo especializado asegura la estabilidad, seguridad y máxima performance de sus sistemas, minimizando riesgos y tiempos de inactividad.</p>
         <div class="hero-actions">
           <a class="btn-primary" href="cotizar-user.html">Cotizar producto</a>
@@ -58,7 +58,7 @@
     </section>
 
     <footer class="site-footer">
-      <div>© TechFix 2025</div>
+      <div>© CoreCloud 2025</div>
       <div class="footer-links">
         <a href="#">Privacidad</a>
         <a href="#">Cliente</a>
@@ -67,6 +67,7 @@
   </main>
 </body>
 </html>
+
 
 
 
