--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="form-box card visible" style="width:100%; max-width:400px;">
         <h2 style="margin-bottom:12px;">Selecciona tu rol</h2>
         <select id="role" class="toggle">
-          <option value="">-- Selecciona --</option>
+          <option value=""> Selecciona </option>
           <option value="admin">Administrador</option>
           <option value="cliente">Cliente</option>
         </select>
@@ -52,6 +52,7 @@
 </body>
 
 </html>
+
 
 
 
