--- a/cotizar-user.html
+++ b/cotizar-user.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cotizar - TechFix</title>
+    <title>CoreCloud - Cotizar</title>
     <link rel="stylesheet" href="css/cotizar-user.css">
     <script src="js/servicios.js" defer></script>
     <script src="js/cotizar-user.js" defer></script>
@@ -11,7 +11,7 @@
 
 <body>
 <header class="site-header small">
-    <div class="logo"><div class="logo-dot"></div><span>TechFix</span></div>
+    <div class="logo"><div class="logo-dot"></div><span>CoreCloud</span></div>
     <nav class="nav">
         <a href="index-user.html">Inicio</a>
         <a href="servicios-user.html">Servicios</a>
