--- a/servicios-admin.html
+++ b/servicios-admin.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Servicios - TechFix</title>
+  <title>CoreCloud - Servicios</title>
   <link rel="stylesheet" href="css/servicios.css">
   <script src="js/servicios.js" defer></script>
 </head>
 <body>
   <header class="site-header small">
-    <div class="logo"><div class="logo-dot"></div><span>TechFix</span></div>
+    <div class="logo"><div class="logo-dot"></div><span>CoreCloud</span></div>
     <nav class="nav">
       <a href="index-admin.html">Inicio</a>
       <a href="servicios-admin.html" class="active">Servicios</a>
@@ -45,10 +45,11 @@
   </main>
 
   <footer class="site-footer">
-    <p>© TechFix - Servicios Técnicos</p>
+    <p>© CoreCloud - Servicios Técnicos</p>
   </footer>
 </body>
 </html>
+
 
 
 
