--- a/clientes-admin.html
+++ b/clientes-admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Registrar Cliente - TechFix</title>
+  <title>CoreCloud - Registar Cliente</title>
   <link rel="stylesheet" href="css/clientes.css">
   <script src="js/clientes.js" defer></script>
 </head>
@@ -63,5 +63,6 @@
   </main>
 </body>
 </html>
+
 
 
