--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Cotizar Servicio - TechFix</title>
+  <title>CoreCloud - Cotizar Servicio</title>
   <link rel="stylesheet" href="css/cotizar.css">
   <script src="js/cotizar.js" defer></script>
 </head>
 
 <body>
   <header class="site-header small">
-    <div class="logo"><div class="logo-dot"></div><span>TechFix</span></div>
+    <div class="logo"><div class="logo-dot"></div><span>CoreCloud</span></div>
     <nav class="nav">
       <a href="index-admin.html">Inicio</a>
       <a href="servicios-admin.html">Servicios</a>
@@ -55,6 +55,7 @@
   </main>
 </body>
 </html>
+
 
 
 
