--- a/clientes-admin.html
+++ b/clientes-admin.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="site-header">
-    <div class="logo"><span>TechFix</span></div>
+    <div class="logo"><span>CoreCloud</span></div>
     <nav class="nav">
       <a href="index-admin.html">Inicio</a>
       <a href="servicios-admin.html">Servicios</a>
@@ -63,6 +63,7 @@
   </main>
 </body>
 </html>
+
 
 
 
