--- a/cotizar-user.html
+++ b/cotizar-user.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="right-panel">
-        <h3>Cotización</h3>
+        <h3>CoreCloud - Cotización</h3>
 
         <div class="factura-header">
             <p><b>N° Cotización:</b> <span id="idCotizacion"></span></p>
