Fix HTML formatting and structure

--- a/index-user.html
+++ b/index-user.html
@@ -15,7 +15,7 @@
     </div>
 
     <nav class="nav">
-      <a href="index-user.html">Inicio</a>
+      <a href="index.html">Inicio</a>
       <a href="servicios-user.html">Servicios</a>
       <a href="cotizar-user.html">Cotizar</a>
     </nav>
@@ -72,6 +72,7 @@
   </main>
 </body>
 </html>
+
 
 
 
