--- a/index-user.html
+++ b/index-user.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CoreCloud - Cotizaciones</title>
-  <link rel="stylesheet" href="css/index-user.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/index-admin.css">
   <script src="js/main.js" defer></script>
 </head>
 <body>
@@ -21,7 +22,7 @@
     </nav>
 
     <div class="cta">
-       <a class="btn-ghost" href="index.html">Salir</a>
+       <a class="btn-ghost" href="index.html">Iniciar Sesión</a>
     </div>
   </header>
 
@@ -72,7 +73,6 @@
   </main>
 </body>
 </html>
-
 
 
 
