Change CTA button text to 'Iniciar Sesión'
Updated the call-to-action button text from 'Salir' to 'Iniciar Sesión'.

--- a/index-admin.html
+++ b/index-admin.html
@@ -22,7 +22,7 @@
     </nav>
 
     <div class="cta">
-      <a class="btn-ghost" href="index.html">Salir</a>
+      <a class="btn-ghost" href="index.html">Iniciar Sesión</a>
     </div>
   </header>
 
