--- a/servicios-user.html
+++ b/servicios-user.html
@@ -11,7 +11,7 @@
   <header class="site-header small">
     <div class="logo"><div class="logo-dot"></div><span>CoreCloud</span></div>
     <nav class="nav">
-      <a href="index-user.html">Inicio</a>
+      <a href="index.html">Inicio</a>
       <a href="servicios-user.html" class="active">Servicios</a>
       <a href="cotizar-user.html">Cotizar</a>
     </nav>
@@ -48,6 +48,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
