--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CoreCloud - Acceso</title>
-  <link rel="stylesheet" href="css/login.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
   <div class="container" style="display:flex; flex-direction:row; min-height:100vh;">
@@ -74,3 +74,4 @@
   <script src="js/login.js"></script>
 </body>
 </html>
+
