Change logout button text to 'Cerrar Sesión'
Updated the logout button text from 'Iniciar Sesión' to 'Cerrar Sesión'.

--- a/index-user.html
+++ b/index-user.html
@@ -22,7 +22,7 @@
     </nav>
 
     <div class="cta">
-       <a class="btn-ghost" href="index.html">Iniciar Sesión</a>
+       <a class="btn-ghost" href="index.html">Cerrar Sesión</a>
     </div>
   </header>
 
@@ -73,6 +73,7 @@
   </main>
 </body>
 </html>
+
 
 
 
