--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cotizar Cliente - ADMIN</title>
-  <link rel="stylesheet" href="cotizar.css">
+  <link rel="stylesheet" href="css/cotizar.css">
   <script src="cotizar_admin.js" defer></script>
 </head>
 
@@ -104,6 +104,7 @@
 
 </body>
 </html>
+
 
 
 
