--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cotizar Cliente - ADMIN</title>
   <link rel="stylesheet" href="css/cotizar.css">
-  <script src="cotizar_admin.js" defer></script>
+  <script src="js/cotizar-admin.js" defer></script>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
   <!-- ================= HEADER ================= -->
   <header class="site-header">
     <div class="logo">
-      <span class="logo-dot"></span> TechFix Admin
+      <span class="logo-dot"></span> CoreCloud
     </div>
 
     <nav class="nav">
@@ -104,6 +104,7 @@
 
 </body>
 </html>
+
 
 
 
