--- a/cotizar-user.html
+++ b/cotizar-user.html
@@ -13,7 +13,7 @@
 <header class="site-header small">
     <div class="logo"><div class="logo-dot"></div><span>CoreCloud</span></div>
     <nav class="nav">
-        <a href="index.html">Inicio</a>
+        <a href="index-user.html">Inicio</a>
         <a href="servicios-user.html">Servicios</a>
         <a href="cotizar-user.html" class="active">Cotizar</a>
     </nav>
