--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -45,29 +45,18 @@
 
       <h2>Agregar Servicio</h2>
 
-      <label for="servicioNombre">Servicio</label>
-      <input type="text" id="servicioNombre" placeholder="Ej: Reemplazo de pantalla">
+<label for="servicioSelect">Servicio</label>
+<select id="servicioSelect">
+  <option value="" disabled selected>Seleccionar servicio...</option>
+</select>
 
-      <label for="servicioCategoria">Categoría</label>
-      <select id="servicioCategoria">
-        <option value="" disabled selected>Elegir categoría</option>
-        <option value="Hardware">Hardware</option>
-        <option value="Software">Software</option>
-        <option value="Diagnóstico">Diagnóstico</option>
-        <option value="Otro">Otro</option>
-      </select>
+<button class="btn-add" id="btnAgregar">
+   Agregar Servicio
+</button>
 
-      <label for="servicioPrecio">Precio</label>
-      <input type="text" id="servicioPrecio" placeholder="Ej: 45">
-
-      <button class="btn-add" id="btnAgregar">
-        ➕ Agregar Servicio
-      </button>
-
-      <button class="btn-print" id="btnImprimir">
-        🖨 Imprimir Cotización
-      </button>
-    </div>
+<button class="btn-print" id="btnImprimir">
+   Imprimir Cotización
+</button>
 
     <!-- =============== PANEL DERECHO (Tabla + Totales) =============== -->
     <div class="right-panel">
@@ -104,6 +93,7 @@
 
 </body>
 </html>
+
 
 
 
