--- a/cotizar-admin.html
+++ b/cotizar-admin.html
@@ -6,16 +6,19 @@
     <title>CoreCloud - Cotizar</title>
     <link rel="stylesheet" href="css/cotizar-user.css">
     <script src="js/servicios.js" defer></script>
-    <script src="js/cotizar-user.js" defer></script>
+    <script src="js/cotizar.js" defer></script>
 </head>
 
 <body>
 <header class="site-header small">
     <div class="logo"><div class="logo-dot"></div><span>CoreCloud</span></div>
     <nav class="nav">
-        <a href="index-user.html">Inicio</a>
-        <a href="servicios-user.html">Servicios</a>
-        <a href="cotizar-user.html" class="active">Cotizar</a>
+        <a href="index-admin.html">Inicio</a>
+        <a href="servicios-admin.html">Servicios</a>
+        <a href="clientes-admin.html">Registrar Cliente</a>
+        <a href="cotizar-admin.html">Cotizar</a>
+    </nav>
+        <a href="cotizar-admin.html" class="active">Cotizar</a>
     </nav>
 </header>
 
@@ -67,6 +70,7 @@
 
 </body>
 </html>
+
 
 
 
